# hixel-server

./: .gitignore  Cargo.toml  build.sh
.github/workflows/: deploy.yml
.rustls_acme_cache/: cached_account_vbinvwNWJWjuBiN-Wc7XWinNSwf-v1iLL7EZFwNpaMM
latest/: hixelserver
latest/.rustls_acme_cache/: cached_account_-B87skl5jKJQY4CdSd5rHFwGXaWYFNAqwaJov7lqHik
src/: handlers.rs  main.rs  models.rs  worker.rs
static/: index.html
