[package]
name = "hixelserver"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = { version = "4", features = ["rustls-0_23"] }
rustls-acme = { version = "0.15", features = ["axum"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustls = "0.23"

[profile.release]
strip = true
lto = true
